@startuml tag
hide circle
hide methods
skinparam linetype ortho

entity "tags" as tags {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR(50)
  type : VARCHAR(20)  ' CATEGORY / PHILOSOPHER / VALUE
  deleted_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "battles" as battles {
  * id : BIGINT <<PK>>
  --
  title : VARCHAR(255)
}

entity "battle_options" as battle_options {
  * id : BIGINT <<PK>>
  --
  battle_id : BIGINT <<FK>>
  label : VARCHAR(10)
  title : VARCHAR(100)
}

entity "battle_tags" as battle_tags {
  * id : BIGINT <<PK>>
  --
  battle_id : BIGINT <<FK>>
  tag_id : BIGINT <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  UNIQUE (battle_id, tag_id)
}

entity "battle_option_tags" as battle_option_tags {
  * id : BIGINT <<PK>>
  --
  battle_option_id : BIGINT <<FK>>
  tag_id : BIGINT <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  UNIQUE (battle_option_id, tag_id)
}

battles ||--o{ battle_tags : has
tags ||--o{ battle_tags : mapped

battle_options ||--o{ battle_option_tags : has
tags ||--o{ battle_option_tags : mapped

note right of tags
  현재 태그는 Battle 도메인에서만 사용
  - battle_tags: 카테고리
  - battle_option_tags: 철학자/가치관
end note

@enduml
